--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Caroline Williams GIS Portfolio</h1>
+<p>Hello! I am an M.S. Candidate in Geographic Information Science. This professional portfolio features my work and experiences.</p>
 </body>
 </html>
