--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Caroline Williams GIS Portfolio</h1>
-<p>Hello! I am an M.S. Candidate in Geographic Information Science. This professional portfolio features my work and experiences.</p>
-</body>
-</html>
+---
+layout: default
+title: Caroline Williams
+---
+<div class="blurb">
+	<h1>Hi there, I'm Hank Quinlan!</h1>
+	<p>Hello! I am an M.S. Candidate in Geographic Information Science. This professional portfolio features my work and experiences. <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
