--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Caroline Williams
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
+	<h1>Hi there, I'm Caroline Williams</h1>
 	<p>Hello! I am an M.S. Candidate in Geographic Information Science. This professional portfolio features my work and experiences. <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
