--- a/index.html
+++ b/index.html
@@ -1,8 +1,54 @@
----
-layout: default
-title: Caroline Williams
----
-<div class="blurb">
-	<h1>Hi there, I'm Caroline Williams</h1>
-	<p>Hello! I am an M.S. Candidate in Geographic Information Science. This professional portfolio features my work and experiences. <a href="/about">Read more about my life...</a></p>
-</div><!-- /.blurb -->
+<!DOCTYPE html>
+  <html>
+    <head>
+      <title>Caroline Williams | Web Mapping Portfolio</title>
+      <link rel="stylesheet" href="styles/style.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <head>
+
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <body>
+    <nav>
+      <div class="banner">
+        <div class="navbar">
+          <ul>
+            <li><a href="index.html" class="active">HOME</a></li>
+            <li><a href="about.html" class="active">ABOUT ME</a></li>
+            <li><a href="resume.html" class="active">RESUME</a></li>
+            <li><a href="portfolio.html" class="active">WEB MAPS</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  <div class="text">
+    <h1>Caroline Williams Web Mapping Portfolio</h1>
+      </br>
+    <p>Hello! I am an M.S. Candidate in Geographic Information Science.</p>
+    <p>This professional portfolio features my work and experiences.</p>
+  </div>
+
+<section>
+  <div class="about_me">
+      </br>
+        <h1>ABOUT ME</h1>
+          </br>
+          <p>I am a graduate student enrolled at Clark University pursuing a masters degree in Geographic Information Science. I am passionate about doing research relating to land cover change, terrestrial and coastal ecosystems, atmospheric science and the threats we face by climate change. I have accomplished work in research relating land cover change both at my workplace and through the completion of my senior honors thesis. My goal is to increase skills in programming and utilize technology to better understand our environment.</p>
+        <br></br>
+          <img src="images/aboutme_photo2.jpg" alt=""></img>
+        <br></br>
+      <a href="portfolio.html" class="button">Recent Work</a>
+  </div>
+</section>
+
+<script src="scripts/app.js"></script>
+</body>
+
+<footer>
+  <div class="footer">
+  <a href="https://www.linkedin.com/in/caroline-ann-williams-research-assistant-tech-support/"><i class="fa fa-linkedin"></i></a>
+  <a href="https://github.com/cawilliams719"><i class="fa fa-github"></i></a>
+  </div>
+</footer>
+</html>
