--- a/portfolio.html
+++ b/portfolio.html
@@ -46,6 +46,14 @@
 </section>
 <br>
 <section>
+  <div class="resume_page">
+      </br>
+      <p>Note: You may need to zoom in for the extent of the slider maps to appear.</p>
+        <br>
+  </div>
+</section>
+<br>
+<section>
   <div class="web_page">
       </br>
       <h1>Life of Hurricane Iota</h1>
@@ -97,6 +105,37 @@
   </div>
 </section>
 <br>
+<section>
+  <div class="web_page">
+      </br>
+      <h1>My Favorite Places</h1>
+        <br>
+  </div>
+</section>
+  <br>
+  <section>
+  <div class="resume_page">
+    <iframe src="https://www.google.com/maps/d/embed?mid=1UbfQQrnqcBGOqslg4Ssv9kZYTDYhP7m_&hl=en" width="640" height="480"></iframe>
+  </div>
+  </section>
+</div>
+</section>
+<br>
+<section>
+  <div class="web_page">
+      </br>
+      <h1>New York Electric Vehicle Charging Stations</h1>
+        <br>
+  </div>
+</section>
+  <br>
+  <section>
+  <div class="resume_page">
+    <script src="https://embed.github.com/view/geojson/cawilliams719/spatial_data/main/NY_CS.geojson"></script>
+  </div>
+  </section>
+</div>
+</section>
 </body>
 <!-- Footer -->
 <br/><br/><br/>
