--- a/portfolio.html
+++ b/portfolio.html
@@ -114,7 +114,7 @@
 </section>
   <br>
   <section>
-  <div class="resume_page">
+  <div class="web_page">
     <iframe src="https://www.google.com/maps/d/embed?mid=1UbfQQrnqcBGOqslg4Ssv9kZYTDYhP7m_&hl=en" width="640" height="480"></iframe>
   </div>
   </section>
@@ -130,7 +130,7 @@
 </section>
   <br>
   <section>
-  <div class="resume_page">
+  <div class="web_page">
     <script src="https://embed.github.com/view/geojson/cawilliams719/spatial_data/main/NY_CS.geojson"></script>
   </div>
   </section>
