--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
   <section>
     <div class="resume_page">
         </br>
-        <p>Note: This Incidents map is fully avaiable to Clark University users. Alternatively, certain features and cabailities not be aviable due to permissions.</p>
+        <p>Note: This Incidents map is fully avaiable to Clark University users. Alternatively, certain features and cabailities not be avaiable due to permissions.</p>
           <br>
     </div>
   </section>
