--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <div class="column">
         <a href="projects/Mapping-Burn-Scars-using-GEE.html" target="">
           <div class="container">
-            <img src="images/wildfire_project.png" class="image">
+            <img src="images/wildfire_project.jpg" class="image">
             <div class="overlay">
               <div class="grid_text">Mapping Burn Scars using Google Earth Engine JavaScript API</div>
             </div>
@@ -152,7 +152,7 @@
       <div class="column">
         <a href="projects/USAID-Web-Mapping-Course-Project.html" target="">
           <div class="container">
-            <img src="images/WM_layer.png" class="image">
+            <img src="images/WM_layer.jpg" class="image">
             <div class="overlay">
               <div class="grid_text">Web Mapping Final Project USAID Prototype</div>
             </div>
@@ -172,7 +172,7 @@
       <div class="column">
         <a href="projects/Vulnerability-Populations-in-Vietnam-to-Tropical-Cyclones.html" target="">
           <div class="container">
-            <img src="images/vulnerability_project_image_v2.png" class="image">
+            <img src="images/vulnerability_project_image_v2.jpg" class="image">
             <div class="overlay">
               <div class="grid_text">Vulnerability of Populations in Vietnam to Tropical Cyclones</div>
             </div>
@@ -182,7 +182,7 @@
       <div class="column">
         <a href="projects/SDM_Eastern_Hemlock_Web_Application.html" target="">
           <div class="container">
-            <img src="images/SDM2_layer.png" class="image">
+            <img src="images/SDM2_layer.jpg" class="image">
             <div class="overlay">
               <div class="grid_text">Eastern Hemlock Species Distribution Model Web Map</div>
             </div>
