--- a/projects/Mapping-Burn-Scars-using-GEE.html
+++ b/projects/Mapping-Burn-Scars-using-GEE.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Caroline Williams | Mapping Burn Scars using Google Earth Engine JavaScript API</title>
-    <link rel="stylesheet" href="..//styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
     <!--- Navigation Bar --->
 <body>
   <nav>
     <div class="navbar" id="mynavbar">
-      <a href="..//index.html">HOME</a>
-      <a href="..//about.html">ABOUT ME</a>
-      <a href="..//resume.html">RESUME</a>
-      <a href="..//portfolio.html" class="active">PORTFOLIO</a>
+      <a href="../index.html">HOME</a>
+      <a href="../about.html">ABOUT ME</a>
+      <a href="../resume.html">RESUME</a>
+      <a href="../portfolio.html" class="active">PORTFOLIO</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
@@ -32,7 +32,7 @@
     <div class="desktop">
       <div class="about_cont">
         <div class="about-left">
-          <img src="..//images/wildfire_project_crop.png" class="project-image">
+          <img src="../images/wildfire_project_crop.jpg" class="project-image">
         </div>
         <div class="about-right">
           <div class="about-text">
@@ -49,7 +49,7 @@
     <div class="tablet_device_1000px">
       <div class="project_tablet_cont">
         <div class="project-tablet-left">
-          <img src="..//images/wildfire_project_crop.png" class="project-tablet-image">
+          <img src="../images/wildfire_project_crop.jpg" class="project-tablet-image">
         </div>
         <div class="project-tablet-right">
           <div class="project-tablet-text">
@@ -146,6 +146,6 @@
   <div class="bottom_footer">
     <p><small>&copy; Copyright 2021, Caroline Williams</small></p>
   </div>
-  <script src="..//scripts/icon.js"></script>
+  <script src="../scripts/icon.js"></script>
   </body>
 </html>
