--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
   <div class="portcolumn GIS remotesensing">
     <div class="portcontent">
       <a href="projects/Mapping-Burn-Scars-using-GEE.html" target="" class="port_txt">
-        <img src="images/wildfire_project_crop.png" alt="Mapping Burn Scars using Google Earth Engine JavaScript API" style="width:100%">
+        <img src="images/wildfire_project_crop.jpg" alt="Mapping Burn Scars using Google Earth Engine JavaScript API" style="width:100%">
         <h3 style="font-family: 'Montserrat', sans-serif;">Mapping Burn Scars using Google Earth Engine JavaScript API</h3>
       </a>
     </div>
@@ -76,7 +76,7 @@
   <div class="portcolumn webmaps">
     <div class="portcontent">
       <a href="projects/USAID-Web-Mapping-Course-Project.html" target="" class="port_txt">
-      <img src="images/WM_layer_crop.png" alt="USAID Web Mapping Project" style="width:100%">
+      <img src="images/WM_layer_crop.jpg" alt="USAID Web Mapping Project" style="width:100%">
       <h3 style="font-family: 'Montserrat', sans-serif;">Web Mapping Final Project USAID Prototype</h3>
       </a>
     </div>
@@ -84,7 +84,7 @@
   <div class="portcolumn webmaps">
     <div class="portcontent">
       <a href="projects/Malnutrition-Health-Sites-in-Mali-Web-Mapping.html" target="" class="port_txt">
-      <img src="images/studio6_project_image_crop.png" alt="Car" style="width:100%">
+      <img src="images/studio6_project_image_crop.jpg" alt="Car" style="width:100%">
       <h3 style="font-family: 'Montserrat', sans-serif;">Malnutrition & Health Sites in Mali Web Mapping</h3>
       </a>
     </div>
@@ -92,7 +92,7 @@
   <div class="portcolumn GIS">
     <div class="portcontent">
       <a href="projects/Vulnerability-Populations-in-Vietnam-to-Tropical-Cyclones.html" target="" class="port_txt">
-      <img src="images/vulnerability_project_image_v2_crop.png" alt="Car" style="width:100%">
+      <img src="images/vulnerability_project_image_v2_crop.jpg" alt="Car" style="width:100%">
       <h3 style="font-family: 'Montserrat', sans-serif;">Vulnerability of Populations in Vietnam to Tropical Cyclones</h3>
       </a>
     </div>
@@ -100,7 +100,7 @@
   <div class="portcolumn GIS webmaps">
     <div class="portcontent">
       <a href="projects/SDM_Eastern_Hemlock_Web_Application.html" target="" class="port_txt">
-      <img src="images/SDM2_layer_crop.png" alt="Car" style="width:100%">
+      <img src="images/SDM2_layer_crop.jpg" alt="Car" style="width:100%">
       <h3 style="font-family: 'Montserrat', sans-serif;">Eastern Hemlock Species Distribution Model Web Map</h3>
       </a>
     </div>
@@ -116,7 +116,7 @@
   <div class="portcolumn GIS">
     <div class="portcontent">
       <a href="projects/SDM_Papio_anubis_and_hamadryas.html" target="" class="port_txt">
-      <img src="images/sdm_papio_anubis.png" alt="Car" style="width:100%">
+      <img src="images/sdm_papio_anubis.jpg" alt="Car" style="width:100%">
       <h3 style="font-family: 'Montserrat', sans-serif;">Specied Distribution Model: Papio anubis and Papio hamadryas</h3>
       </a>
     </div>
