--- a/projects/Electric_Vehicle_Spatial_Analysis.html
+++ b/projects/Electric_Vehicle_Spatial_Analysis.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Caroline Williams | SDM Papio anubis</title>
-    <link rel="stylesheet" href="..//styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
     <!--- Navigation Bar --->
 <body>
   <nav>
     <div class="navbar" id="mynavbar">
-      <a href="..//index.html">HOME</a>
-      <a href="..//about.html">ABOUT ME</a>
-      <a href="..//resume.html">RESUME</a>
-      <a href="..//portfolio.html" class="active">PORTFOLIO</a>
+      <a href="../index.html">HOME</a>
+      <a href="../about.html">ABOUT ME</a>
+      <a href="../resume.html">RESUME</a>
+      <a href="../portfolio.html" class="active">PORTFOLIO</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
@@ -32,7 +32,7 @@
     <div class="desktop">
       <div class="about_cont">
         <div class="about-left">
-          <img src="..//images/ny_fig2_crop.jpg" class="project-image">
+          <img src="../images/ny_fig2_crop.jpg" class="project-image">
         </div>
         <div class="about-right">
           <div class="about-text">
@@ -46,7 +46,7 @@
     <div class="tablet_device_1000px">
       <div class="project_tablet_cont">
         <div class="project-tablet-left">
-          <img src="..//images/ny_fig2_crop.jpg" class="project-tablet-image">
+          <img src="../images/ny_fig2_crop.jpg" class="project-tablet-image">
         </div>
         <div class="project-tablet-right">
           <div class="project-tablet-text">
@@ -165,25 +165,25 @@
     <p style="padding-top: 20px; padding-bottom: 20px;"><b style="color: var(--accent2); font-family: 'Montserrat', sans-serif;">New York State Analysis</b><br></br>As a comparative analysis, New York was one of two states chosen to illustrate state-level trends and relationships with electric vehicles, charging stations and socioeconomic factors. ACS and NYSERDA were utilized for socioeconmic and EV/CS variables respectively. Using Geographic Weighted Regressions for Electric Vehicle registrations and Charging stations, we are able to ask, how accessible are electric vehicles and charging stations in relation to various socioeconomic variables? In addition to the GWR Analysis, this question is further explored through summary statistics, exploratory analyses, correlation and collinearity tests, and spatial autocorrelation of the GWR outputs using Moran's I.
     </p>
     <div style="max-width: 800px; margin: 0 auto !important; float: none !important; mix-blend-mode: multiply">
-      <img alt="" style="width:100%; height:auto; aspect-ratio: auto 876 / 608" src="images/NY_CS_map.png" width="876" height="608">
-      <img alt="" style="width:100%; height:auto; aspect-ratio: auto 825 / 731" src="images/NY_variables.png" width="825" height="731">
+      <img alt="" style="width:100%; height:auto; aspect-ratio: auto 876 / 608" src="images/NY_CS_map.jpg" width="876" height="608">
+      <img alt="" style="width:100%; height:auto; aspect-ratio: auto 825 / 731" src="images/NY_variables.jpg" width="825" height="731">
     </div>
     <p style="padding-top: 20px; padding-bottom: 20px;"><b style="color: var(--accent2); font-family: 'Montserrat', sans-serif;">New York State Results</b><br></br>Summary statistics of total electric vehicle (EV) and charging stations (CS) per county resulted in a median of 9 EVs and 12 CS per county. While these medians are close in value, there is a larger difference in the maximum values of EV and CS with 46,842 and 355 respectively. Additional statistical results show the top 5 counties for percentage of electric vehicles and percentage of charging stations per county. Only one county, Ulster County, experiences both high EV and CS percentages being the fourth greatest county with Electric Vehicle registrations (44%) and fifth largest county in Charging Stations (4%).<br></br>In exploring the correlation and collinearity of census variables, there was a -1 correlation between male and female variables. Therefore only female was utilized in the GWR as one of the two sex variables, whichever being second in the linear model, would result in an NA value. The correlation plot below demonstrates this issue of collinearity. This is similarly observed with the white and person of color (POC) variable, however this correlation is not as strong as the two sex variables and doesn't result in NA values in the model. Additionally, the distribution of EV and CS in NY shows differing distributions and percentage values.
     </p>
     <div style="max-width: 1000px; margin: 0 auto !important; float: none !important; mix-blend-mode: multiply">
-      <img alt="" style="width:100%; height:auto; aspect-ratio: auto 1125 / 799" src="images/NY_correlation_plot.png" width="1125" height="799">
+      <img alt="" style="width:100%; height:auto; aspect-ratio: auto 1125 / 799" src="images/NY_correlation_plot.jpg" width="1125" height="799">
     </div>
     <div style="max-width: 800px; margin: 0 auto !important; float: none !important; mix-blend-mode: multiply">
-      <img alt="" style="width:100%; height:auto; aspect-ratio: auto 876 / 608" src="images/NY_EV_CS_histogram.png" width="876" height="608">
+      <img alt="" style="width:100%; height:auto; aspect-ratio: auto 876 / 608" src="images/NY_EV_CS_histogram.jpg" width="876" height="608">
     </div>
     <p style="padding-top: 20px; padding-bottom: 20px;">The linear model used for the Geographic Weighted Regressions depicts the statistical significance between the socioeconomic variables and Electric vehicles and Charging Stations. The following coefficients were highly significant for the Electric Vehicle linear model: Education (p < 0) and population density (p < 0) were the most significant followed by people below the age of 25 (p < 0.01), people aged 25 to 64 (p < 0.05), and percentage of Charging Stations (p < 0.05). In the Charging Stations linear model the following variables were statistically significant: Median Income (p<0) was the most significant in the CS model. After people aged 65 and older (p < 0.05) and Electric Vehicles (p < 0.1) were significant. The correlation of the most significant coefficient in their respective GWRs are plotted as a graph and map below. The final GWR maps of Local R2 are also mapped below.
     </p>
     <div style="max-width: 1000px; margin: 0 auto !important; float: none !important; mix-blend-mode: multiply">
-      <img alt="" style="width:100%; height:auto; aspect-ratio: auto 1017 / 573" src="images/NY_significant_EV_CS_cor.png" width="1017" height="573">
+      <img alt="" style="width:100%; height:auto; aspect-ratio: auto 1017 / 573" src="images/NY_significant_EV_CS_cor.jpg" width="1017" height="573">
     </div>
     <div style="max-width: 800px; margin: 0 auto !important; float: none !important; mix-blend-mode: multiply">
-      <img alt="" style="width:100%; height:auto; aspect-ratio: auto 937 / 525" src="images/NY_coefficients.png" width="937" height="525">
-      <img alt="" style="padding-bottom: 20px; width:100%; height:auto; aspect-ratio: auto 860 / 345" src="images/NY_gwr_localR.png" width="860" height="345">
+      <img alt="" style="width:100%; height:auto; aspect-ratio: auto 937 / 525" src="images/NY_coefficients.jpg" width="937" height="525">
+      <img alt="" style="padding-bottom: 20px; width:100%; height:auto; aspect-ratio: auto 860 / 345" src="images/NY_gwr_localR.jpg" width="860" height="345">
     </div>
     <p style="color: var(--darktext); font-family: 'Montserrat', sans-serif;"><b>Discussion:</b></p>
     <p style="padding-bottom: 20px;">The varying percentages and distribution of Electric Vehicles and Charging Stations across New York State indicates a need to reduce this gap. An adequate number of charging stations should be available and accessible to those with Electric vehicles. The New York analysis finds that education and population density are influencing factors towards owning an Electric Vehicle. Areas in which the population is more educated, through having a Bachelor's Degree, are more likely to have a higher percentage of the population owning Electric Vehicles. In contrast to the EV analysis, median income was the most correlated to the presence of Charging Station sites, however unlike the correlation between EV and education, median income and charging station correlation points are concentrated at lower values. This is represented in the Correlation graph in the NY results. Local R2 results show higher correlation between the variables and EV at less populated areas, while slightly lower correlations are found at more populated counties. Interestingly, the Charging Station Local R2 depicts a gradient-like output with southern counties in NY state having lower R2 values than its northern counterpart.
