--- a/projects/WCS-Environmental-Trends-Analysis.html
+++ b/projects/WCS-Environmental-Trends-Analysis.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Caroline Williams | WCS Environmental Trends Analysis Ruaha & Katavi National Parks</title>
-    <link rel="stylesheet" href="..//styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
     <!--- Navigation Bar --->
 <body>
   <nav>
     <div class="navbar" id="mynavbar">
-      <a href="..//index.html">HOME</a>
-      <a href="..//about.html">ABOUT ME</a>
-      <a href="..//resume.html">RESUME</a>
-      <a href="..//portfolio.html" class="active">PORTFOLIO</a>
+      <a href="../index.html">HOME</a>
+      <a href="../about.html">ABOUT ME</a>
+      <a href="../resume.html">RESUME</a>
+      <a href="../portfolio.html" class="active">PORTFOLIO</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
@@ -32,7 +32,7 @@
     <div class="desktop">
       <div class="about_cont">
         <div class="about-left">
-          <img src="..//images/wcs_project_image_crop.jpg" class="project-image">
+          <img src="../images/wcs_project_image_crop.jpg" class="project-image">
         </div>
         <div class="about-right">
           <div class="about-text">
@@ -46,7 +46,7 @@
     <div class="tablet_device_1000px">
       <div class="project_tablet_cont">
         <div class="project-tablet-left">
-          <img src="..//images/wcs_project_image_crop.jpg" class="project-tablet-image">
+          <img src="../images/wcs_project_image_crop.jpg" class="project-tablet-image">
         </div>
         <div class="project-tablet-right">
           <div class="project-tablet-text">
@@ -145,7 +145,7 @@
         <div class="about_cont">
           <div class="about-left">
             <div style="max-width: 600px; margin: 0 auto !important; float: none !important; mix-blend-mode: multiply">
-              <img alt="" style="width:100%; height:auto; padding-right: 40px; margin-bottom: -10px; border-right: 3px solid var(--darktext);" src="images/wcs_study_area.png">
+              <img alt="" style="width:100%; height:auto; padding-right: 40px; margin-bottom: -10px; border-right: 3px solid var(--darktext);" src="images/wcs_study_area.jpg">
             </div>
           </div>
           <div class="about-right">
@@ -160,7 +160,7 @@
         <div class="project_tablet_cont">
           <div class="project-tablet-left">
             <div style="max-width: 600px; margin: 0 auto !important; float: none !important; mix-blend-mode: multiply">
-              <img alt="" style="border-right: 0px solid var(--darktext);width:100%; height:auto;" src="images/wcs_study_area.png">
+              <img alt="" style="border-right: 0px solid var(--darktext);width:100%; height:auto;" src="images/wcs_study_area.jpg">
             </div>
           </div>
           <div class="project-tablet-right">
@@ -174,32 +174,32 @@
       <p style="padding-top: 20px; padding-bottom: 20px;">We utilized a variety of data sources for plotting agricultural lands and examining trends in Ruaha and Katavi National Parks. Terra MODIS was used for fire and parameters like the Enhanced Vegetation Index (EVI). We also used WorldPop and WorldClim for population and precipitation, respectively. Lastly, we used the joint research centre (JRC) occurrence dataset to monitor trends in surface water.
       </p>
         <div style="max-width: 900px; margin: 0 auto !important; float: none !important; mix-blend-mode: multiply; padding-top: 20px; padding-bottom: 20px;">
-          <img alt="" style="width:100%; height:auto;" src="images/wcs_data.png">
+          <img alt="" style="width:100%; height:auto;" src="images/wcs_data.jpg">
         </div>
       <p style="color: var(--darktext); font-family: 'Montserrat', sans-serif;"><b>Methods:</b></p>
       <p style="padding-top: 20px; padding-bottom: 20px;">Our analysis included preprocessing the datasets for each variable. We then examined trends from 2000 to 2020 using various software packages and statistical analyses. We used TerrSet Earth Trends Modeler (ETM) to examine monthly trends in precipitation and vegetation. We used the Mann-Kendall statistic for monotonic trends and Theil-Sen Median trends analysis as well. To visualize our results, we created report cards showing changes in increase, no change, or decrease in these variables for each national park and the mixed use areas in between them.
       </p>
         <div style="max-width: 900px; margin: 0 auto !important; float: none !important; mix-blend-mode: multiply; padding-top: 20px; padding-bottom: 20px;">
-          <img alt="" style="width:100%; height:auto;" src="images/wcs_methods.png">
+          <img alt="" style="width:100%; height:auto;" src="images/wcs_methods.jpg">
         </div>
       <p style="color: var(--darktext); font-family: 'Montserrat', sans-serif;"><b>Results:</b></p>
       <p style="padding-top: 20px; padding-bottom: 20px;">The results show trends in population, wildfire, vegetation, surface water, and precipitation. This includes spatial representations in trends as well as over time.
       </p>
       <div style="max-width: 800px; margin: 0 auto !important; float: none !important; mix-blend-mode: multiply">
-        <img alt="" style="width:100%; height:auto;" src="images/population_trends.png">
-        <img alt="" style="width:100%; height:auto;" src="images/fire_trends.png">
-        <img alt="" style="width:100%; height:auto;" src="images/vegetation_trends.png">
-        <img alt="" style="width:100%; height:auto;" src="images/surface_water_trends.png">
-        <img alt="" style="width:100%; height:auto;" src="images/precipitation_trends.png">
-        <img alt="" style="width:100%; height:auto;" src="images/wet_season.png">
+        <img alt="" style="width:100%; height:auto;" src="images/population_trends.jpg">
+        <img alt="" style="width:100%; height:auto;" src="images/fire_trends.jpg">
+        <img alt="" style="width:100%; height:auto;" src="images/vegetation_trends.jpg">
+        <img alt="" style="width:100%; height:auto;" src="images/surface_water_trends.jpg">
+        <img alt="" style="width:100%; height:auto;" src="images/precipitation_trends.jpg">
+        <img alt="" style="width:100%; height:auto;" src="images/wet_season.jpg">
       </div>
       <p style="color: var(--darktext); font-family: 'Montserrat', sans-serif;"><b>Report Cards:</b></p>
       <p style="padding-top: 20px; padding-bottom: 20px;">The report cards are shown for the Ruaha and Katavi National Parks as well as Mixed Use areas. This shows percent change (increase, no change, decrease) for each variable of interest.
       </p>
       <div style="max-width: 800px; margin: 0 auto !important; float: none !important; mix-blend-mode: multiply">
-        <img alt="" style="width:100%; height:auto;" src="images/ruaha_report_card.png">
-        <img alt="" style="width:100%; height:auto;" src="images/katavi_report_card.png">
-        <img alt="" style="width:100%; height:auto;" src="images/mixed_report_card.png">
+        <img alt="" style="width:100%; height:auto;" src="images/ruaha_report_card.jpg">
+        <img alt="" style="width:100%; height:auto;" src="images/katavi_report_card.jpg">
+        <img alt="" style="width:100%; height:auto;" src="images/mixed_report_card.jpg">
       </div>
       <!-- Desktop -->
         <p style="padding-bottom: 20px; color: var(--darktext); font-family: 'Montserrat', sans-serif;"><b>Conclusions:</b></p>
@@ -207,7 +207,7 @@
           <div class="about_cont">
             <div class="about-left">
               <div style="max-width: 600px; margin: 0 auto !important; float: none !important; mix-blend-mode: multiply">
-                <img alt="" style="width:100%; height:auto; padding-right: 40px; margin-bottom: -10px; border-right: 3px solid var(--darktext);" src="images/wcs_conclusion.png">
+                <img alt="" style="width:100%; height:auto; padding-right: 40px; margin-bottom: -10px; border-right: 3px solid var(--darktext);" src="images/wcs_conclusion.jpg">
               </div>
             </div>
             <div class="about-right">
@@ -222,7 +222,7 @@
           <div class="project_tablet_cont">
             <div class="project-tablet-left">
               <div style="max-width: 600px; margin: 0 auto !important; float: none !important; mix-blend-mode: multiply">
-                <img alt="" style="border-right: 0px solid var(--darktext);width:100%; height:auto;" src="images/wcs_study_area.png">
+                <img alt="" style="border-right: 0px solid var(--darktext);width:100%; height:auto;" src="images/wcs_study_area.jpg">
               </div>
             </div>
             <div class="project-tablet-right">
