--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <div class="column">
         <a href="projects/Mapping-Burn-Scars-using-GEE.html" target="">
           <div class="container">
-            <img src="images/wildfire_project.jpg" class="image">
+            <img src="images/wildfire_project_crop.jpg" class="image">
             <div class="overlay">
               <div class="grid_text">Mapping Burn Scars using Google Earth Engine JavaScript API</div>
             </div>
@@ -152,7 +152,7 @@
       <div class="column">
         <a href="projects/USAID-Web-Mapping-Course-Project.html" target="">
           <div class="container">
-            <img src="images/WM_layer.jpg" class="image">
+            <img src="images/WM_layer_crop.jpg" class="image">
             <div class="overlay">
               <div class="grid_text">Web Mapping Final Project USAID Prototype</div>
             </div>
@@ -162,7 +162,7 @@
       <div class="column">
         <a href="projects/WCS-Environmental-Trends-Analysis.html" target="">
           <div class="container">
-            <img src="images/wcs_project_image.jpg" class="image">
+            <img src="images/wcs_project_image_crop.jpg" class="image">
             <div class="overlay">
               <div class="grid_text">WCS Environmental Trends Analysis Ruaha & Katavi National Parks</div>
             </div>
@@ -172,7 +172,7 @@
       <div class="column">
         <a href="projects/Vulnerability-Populations-in-Vietnam-to-Tropical-Cyclones.html" target="">
           <div class="container">
-            <img src="images/vulnerability_project_image_v2.jpg" class="image">
+            <img src="images/vulnerability_project_image_v2_crop.jpg" class="image">
             <div class="overlay">
               <div class="grid_text">Vulnerability of Populations in Vietnam to Tropical Cyclones</div>
             </div>
@@ -182,7 +182,7 @@
       <div class="column">
         <a href="projects/SDM_Eastern_Hemlock_Web_Application.html" target="">
           <div class="container">
-            <img src="images/SDM2_layer.jpg" class="image">
+            <img src="images/SDM2_layer_crop.jpg" class="image">
             <div class="overlay">
               <div class="grid_text">Eastern Hemlock Species Distribution Model Web Map</div>
             </div>
@@ -192,7 +192,7 @@
       <div class="column">
         <a href="projects/Electric_Vehicle_Spatial_Analysis.html" target="">
           <div class="container">
-            <img src="images/ny_fig2.jpg" class="image">
+            <img src="images/ny_fig2_crop.jpg" class="image">
             <div class="overlay">
               <div class="grid_text">Electric Vehicle Spatial Analysis with R</div>
             </div>
