--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
   <div class="grid_background_col2">
 
       <div class="about_me_center">
-        <img class="me_image" src="./images/aboutme_photo3.jpg" alt=""></img>
+        <img class="me_image" src="./images/NASA_LaRC.jpg" alt=""></img>
 
           <p style="padding-right: 2.5%; padding-left:2.5%;">As a Fellow for the NASA DEVELOP National Program, I supervise teams and projects geared towards using Earth observations to address environmental issues. Before transitioning into this role, I participated in the program for two terms (Summer 2021 and Fall 2021) working on crop yield forecasting and flood detection projects.
           <br></br>In May 2020 and June 2021, I graduated from Clark University receiving a B.A. in Environmental Science on the Earth Systems Science track and M.S. in Geographic Information Science, respectively. While pursuing my undergraduate and graduate degrees, I worked as a Remote Sensing Research Assistant and Technical Support Clark Labs. This included working on a land cover change prediction project in partnership with ESRI and a pond aquaculture and mangrove classification project for the Gordan and Betty and Moore Foundation. While at Clark Labs, I was also responsible for providing technical assistance to users of TerrSet and IDRISI products.
@@ -57,48 +57,7 @@
           <!-- </div> -->
         </div>
 
-  <!--- Section 2: Interests --->
-
-  <!-- Tablet TEST -->
-  <!-- <div class="tablet_device_1000px">
-    <div class="tablet_about_me"> -->
-    <!--- Section 1: About Me again --->
-    <!-- <img class="tablet_images" src="images/NASA_LaRC.jpg" alt=""></img>
-    <div class="tablet_about_me_cont">
-      <div class="tablet_about_me_txt">
-        <p>This past June, I graduated from Clark University receiving an M.S. in Geographic Information Science. Prior to receiving my master’s degree, I accumulated just under two years of professional experience as a Remote Sensing Research Assistant and as the Technical Support person for TerrSet and IDRISI products at Clark Labs. Currently, I am a second time participant in the NASA DEVELOP National Program as a Project Lead for the Central America Disasters Project.</p>
-          <br>
-        <p>I am also passionate about doing research relating to land cover change, terrestrial and coastal ecosystems, atmospheric science, and the threats we face by climate change. My goal is to increase skills in programming and utilize technology to better understand our environment.</p>
-      </div>
-    </div> -->
-    <!--- Section 2: Interests --->
-    <!-- <img class="tablet_images" style="margin-top: 20px;" src="images/research_interests_img.jpg" alt=""></img>
-    <div class="tablet_about_me_cont">
-      <div class="tablet_about_me_txt">
-        <h2>Research Interests</h2>
-          <br>
-        <p>Remote Sensing | Land Use and Land Cover Change | Climate Change | Terrestrial Environments | ​Geospatial Analysis | Conservation</p>
-      </div>
-    </div> -->
-    <!--- Section 3: Skills --->
-    <!-- <img class="tablet_images" style="margin-top: 20px;" src="images/tech_skills_img.png" alt=""></img>
-    <div class="tablet_about_me_cont">
-      <div class="tablet_about_me_txt">
-        <h2>Technical Skills</h2>
-          <br>
-        <p>Python | ArcPy | R | RStudio | IDRISI TerrSet | ArcGIS | GitHub | Slack | Google Earth Pro | HTML | CSS | JavaScript | Google Earth Engine</p>
-      </div>
-    </div>
-    </div>
-  </div>
-    </div> -->
-  <!--- Section 4: Recent Activity --->
-  <!-- <div class="about_me_section4">
-    <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:6865344301732282368" height="100%" width="402" frameborder="0" allowfullscreen="true" title="Embedded post"></iframe>
-    <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6834586504065556480" height="700px" width="80%" title="Embedded post"></iframe>
-  </div> -->
-
-  <!-- TEST SECTION -->
+  <!--- Section 2: Featured --->
       <div class="grid_background_col2">
         <div class="grid_title_txt"><h1>FEATURED ARTICLES</h1></div>
           <div class="homepage_sect2_cont">
@@ -112,7 +71,7 @@
               </li>
               <!-- Article 2 -->
               <li>
-                <a class="featured" href="https://develop.larc.nasa.gov/news/news.html#Summer2021_DOT" target="_blank">
+                <a class="featured" href="https://appliedsciences.nasa.gov/our-impact/people/summer-2021-developers-term" target="_blank">
                 <b>In NASA DEVELOP August 13th, 2021</b>
                 <p>Summer 2021 DEVELOPers of the Term</p>
                 </a>
