--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
   <div class="grid_background_col2">
 
       <div class="about_me_center">
-        <img class="me_image" src="./images/NASA_LaRC.jpg" alt=""></img>
+        <img class="me_image" src="./images/aboutme_photo3.jpg" alt=""></img>
 
           <p style="padding-right: 2.5%; padding-left:2.5%;">As a Fellow for the NASA DEVELOP National Program, I supervise teams and projects geared towards using Earth observations to address environmental issues. Before transitioning into this role, I participated in the program for two terms (Summer 2021 and Fall 2021) working on crop yield forecasting and flood detection projects.
           <br></br>In May 2020 and June 2021, I graduated from Clark University receiving a B.A. in Environmental Science on the Earth Systems Science track and M.S. in Geographic Information Science, respectively. While pursuing my undergraduate and graduate degrees, I worked as a Remote Sensing Research Assistant and Technical Support Clark Labs. This included working on a land cover change prediction project in partnership with ESRI and a pond aquaculture and mangrove classification project for the Gordan and Betty and Moore Foundation. While at Clark Labs, I was also responsible for providing technical assistance to users of TerrSet and IDRISI products.
